Fixed the link to select not working correctly. Added tooltips for missing action points. Added dynamic tooltips based on status. Improved existing tooltips working. Added the official logo file. Worked on the layout and spacing of the staff card supporting section.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,3 +1,6 @@
 .material-icons:hover {
     cursor: pointer;
 }
+.discord_name {
+    cursor: text;
+}
